<resources>
    <string name="app_name">Wallet-Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Wallet Analyzer</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="gen_register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="gen_verification_send">Resend Email Verification</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_email">yourmail@hotmail.com</string>
    <string name="gen_version">v.1.0.0</string>
    <string name="hint_firstname">FirstName</string>
    <string name="gen_help">Help</string>
    <string name="hint_lastname">LastName</string>
    <string name="gen_save">Save</string>
    <string name="gen_add">Add</string>
    <string name="gen_total">Total: </string>
    <string name="gen_total_2">Total</string>
    <string name="gen_accounts">Accounts</string>
    <string name="gen_guest">Not a user?</string>
    <string name="gen_spent_month">Expenses</string>
    <string name="gen_month_limit">Goal</string>
    <string name="gen_history">History</string>
    <string name="gen_full_history">Full History</string>
    <string name="gen_filters">Filters</string>
    <string name="gen_order">Sorting</string>
    <string name="gen_edit_mode_on">Edit mode on</string>
    <string name="gen_edit_mode_off">Edit mode off</string>
    <string name="gen_income">Income</string>
    <string name="gen_expenses">Expenses</string>
    <string name="gen_location">Location:</string>
    <string name="gen_date">Date:</string>
    <string name="gen_category">Category:</string>
    <string name="gen_type_category">Supermarket</string>
    <string name="gen_change_language">Change Language</string>
    <string name="gen_month_fast_1">Jan</string>
    <string name="gen_month_fast_2">Feb</string>
    <string name="gen_month_fast_3">Mar</string>
    <string name="gen_month_fast_4">Apr</string>
    <string name="gen_month_fast_5">May</string>
    <string name="gen_month_fast_6">Jun</string>
    <string name="gen_month_fast_7">Jul</string>
    <string name="gen_month_fast_8">Aug</string>
    <string name="gen_month_fast_9">Sep</string>
    <string name="gen_month_fast_10">Oct</string>
    <string name="gen_month_fast_11">Nov</string>
    <string name="gen_month_fast_12">Dec</string>
    <string name="gen_month_1">January</string>
    <string name="gen_month_2">February</string>
    <string name="gen_month_3">March</string>
    <string name="gen_month_4">April</string>
    <string name="gen_month_5">May</string>
    <string name="gen_month_6">June</string>
    <string name="gen_month_7">July</string>
    <string name="gen_month_8">August</string>
    <string name="gen_month_9">September</string>
    <string name="gen_month_10">October</string>
    <string name="gen_month_11">November</string>
    <string name="gen_month_12">December</string>
    <string name="gen_yes">Yes</string>
    <string name="gen_no">No</string>
    <string name="alert_delete_receipt">Do you want to remove the receipt?</string>
    <string name="gen_warning">Warning</string>
    <string name="gen_el">Greek</string>
    <string name="gen_en">English</string>
    <string name="gen_select_language">Choose Language:</string>
    <string name="gen_scan_with_barcode">Scan Barcode</string>
    <string name="gen_scan_with_photo">Scan Image</string>
    <string name="gen_select_scan_type">Choose scan mode</string>
    <string name="location_permission_denied">location</string>
    <string name="permission_required_toast">Location Permission</string>
    <string name="permission_rationale_location">Location</string>
    <string name="action_portfolio">Portfolio</string>
    <string name="filter_price">Filter Price</string>
    <string name="filter_date">Filter Date</string>
    <string name="filter_category">Filter Category</string>
    <string name="order_ascending">Ascending</string>
    <string name="order_descending">Descending</string>
    <string name="title_activity_portfolio">Portfolio</string>
    <string name="tab_text_1">Expenses Analysis</string>
    <string name="tab_text_2">My Account</string>
    <string name="filter_obj_1">By Category</string>
    <string name="filter_obj_2">Month</string>
    <string name="filter_obj_3">Last 7 Days</string>
    <string name="filter_obj_4">Year</string>
    <string name="gen_main_bank">Main bank?</string>
    <string name="gen_description">Description</string>
    <string name="gen_salary">Salary</string>
    <string name="gen_bank_account">Bank Account</string>
    <string name="gen_error_add_item">Please complete the form</string>
    <string name="gen_error_bank_already">There is an activated bank account</string>
    <string name="gen_error_gps">GPS disabled</string>
    <string name="gen_login">Login</string>
    <string name="login_success_message">Logged in successful.</string>
    <string name="register_success_message">Registered Successful. Please check your email.</string>
    <string name="gen_forgot_password">Forgot password?</string>
    <string name="update_photo_wait">The process will take a few seconds.</string>
    <string name="user_profile_updated_message">User profile updated</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_price">Filter by price</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="gen_search">Search</string>
</resources>
