<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".activities.ChooseScanActivity">


    <TextView
        android:id="@+id/activity_choose_mode_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="-7dp"
        android:text="@string/gen_select_scan_type"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ocr_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="215dp"
        android:contentDescription="receipt_image"
        android:elevation="14dp"
        android:src="@mipmap/scan_image_transparent" />

    <Button
        android:id="@+id/scan_with_photo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="52dp"
        android:textSize="10dp"
        android:background="@drawable/button_background_2"
        android:text="@string/gen_scan_with_photo"
        android:textColor="#fff"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="244dp" />

    <Button
        android:id="@+id/scan_with_barcode"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="212dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/button_background_2"
        android:textSize="10dp"
        android:text="@string/gen_scan_with_barcode"
        android:textColor="#fff"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="244dp" />

</RelativeLayout>